# massive-cpp

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile.in  LICENSE  Makefile  README.md  conanfile.py  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  build-test.yml  ci.yml  cmake.yml  codeql.yml  coverage.yml  cppcheck.yml  dependency-review.yml  docker.yml  docs.yml  fuzz.yml  health-check.yml  integration.yml  label.yml  lint.yml  package.yml  performance.yml  release-notes.yml  release.yml  sanitizers.yml  smoke-test.yml  stale.yml  valgrind.yml  verify.yml
benchmarks/: CMakeLists.txt  benchmark_json_parsing.cpp
cmake/: massive-cpp-config.cmake.in
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MIGRATION.md  PERFORMANCE.md  TROUBLESHOOTING.md
examples/: README.md  get_aggs.cpp  get_snapshot.cpp  websocket_example.cpp
include/massive/: exceptions.hpp
include/massive/core/: config.hpp  dotenv.hpp  http_transport.hpp  json.hpp  logging.hpp
include/massive/core/http/: beast_transport.hpp
include/massive/rest/: client.hpp  models.hpp  pagination.hpp  request_options.hpp
include/massive/rest/models/: benzinga.hpp  conversion.hpp  economy.hpp  etf.hpp  financials.hpp  futures.hpp  indicators.hpp  reference.hpp  snapshot.hpp  summaries.hpp  tmx.hpp  vx.hpp
include/massive/websocket/: client.hpp  models.hpp
scripts/: format.sh  quick-start.sh  setup.sh  test-build.sh  verify.sh
src/massive/core/: config.cpp  dotenv.cpp  http_transport.cpp  json.cpp  logging.cpp
src/massive/core/http/: beast_transport.cpp
src/massive/rest/: aggs_client.cpp  benzinga_client.cpp  client_base.cpp  conversion_client.cpp  economy_client.cpp  etf_client.cpp  financials_client.cpp  futures_client.cpp  indicators_client.cpp  pagination.cpp  pagination_iterators.cpp  quotes_client.cpp  reference_client.cpp  request_options.cpp  snapshot_client.cpp  summaries_client.cpp  tmx_client.cpp  trades_client.cpp  vx_client.cpp
src/massive/websocket/: client.cpp
tests/: CMakeLists.txt
tests/unit/: test_config.cpp
